--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,123 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  /* background: linear-gradient(to right, #0F2027, #203A43, #2C5364); */
+  background: linear-gradient(to right, #0f0c29, #0f0c29, #24243e);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.ipod{
+  height:450px;
+  width:250px;
+  background: linear-gradient(#b3b3b3, #DBDBDB, grey, #BFBFBF, #a6a6a6, #737373);
+  position: absolute;
+  top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+  border-radius: 18px;
+  box-shadow: 1px 2px 2px 1px #737373;
+}
+
+.menu-container{
+  height:200px;
+  width:90%;
+  margin-left:12px;
+  margin-top:20px;
+}
+
+.menu-container ul{
+  padding:0px;
+  margin:0px;
+}
+
+.options{
+  padding:10px;
+  font-weight:600;
+  list-style-type: none;
+  padding:10px;
+  background-color: white;
+}
+
+.controls-container{
+  width:200px;
+  height:200px;
+}
+
+#outer-wheel{
+  width:200px;
+  height:200px;
+  background-color:white; 
+  border-radius: 50%;
+  position: absolute;
+  bottom: 10px;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.inner-wheel{
+  width:90px;
+  height:90px;
+  background: linear-gradient(#b3b3b3, #D6D6D6);
+  border-radius: 50%;
+  position: absolute;
+  left:0;
+  right:0;
+  bottom:50px;
+  margin:auto;
+}
+
+#ok{
+  font-size: 20px;
+  font-weight: 700;
+  position: absolute;
+  left:25px;
+  right:0;
+  top:35px;
+  border:0px;
+  outline:none;
+  background-color: transparent;
+}
+
+.menu{
+  position: absolute;
+  left:70px;
+  right:0;
+  top:25px;
+  font-weight:700;
+  font-size:20px;
+  outline:none;
+  border:0px;
+  background-color: white;
+  color: #b3b3b3;
+}
+
+#forward{
+  height:25px;
+  width:25px;
+  position: absolute;
+  top:95px;
+  left:160px;
+}
+
+#backward{
+  height:25px;
+  width:25px;
+  position: absolute;
+  top:95px;
+  left:13px;
+}
+#play-pause{
+  height:20px;
+  width:20px;
+  position: absolute;
+  bottom: 10px;
+  left:95px;
 }
